[gd_scene load_steps=14 format=3 uid="uid://dmo1n0elojtlf"]

[ext_resource type="PackedScene" uid="uid://bv87orrgq5ha8" path="res://Cards/Spawns/Asset/asset.tscn" id="1_noic8"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/balloon.gd" id="2_dbgn1"]
[ext_resource type="Texture2D" uid="uid://dfaycfpyidutq" path="res://Cards/Spawns/Asset/Images/balloons.png" id="2_ow1rj"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/Pop.gd" id="3_ehbbo"]
[ext_resource type="Texture2D" uid="uid://bbi5jedcivhgx" path="res://Cards/Spawns/Asset/Images/balloonpart1.png" id="4_ugp8f"]
[ext_resource type="AudioStream" uid="uid://cewrovh3narte" path="res://Audio/blow.wav" id="6_kh45i"]
[ext_resource type="AudioStream" uid="uid://b8ms1jnuspjak" path="res://Audio/pop.wav" id="6_lawkb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccflj"]

[sub_resource type="Animation" id="Animation_8cgbl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s3yiy"]
resource_name = "balloon"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_xgi53"]
resource_name = "explosion"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.7, 0.8, 0.9, 1, 1.05, 1.1, 1.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.01, 0, 1.2, 1.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(3, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 1.21),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(3, 3)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.21),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pop_balloon"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PopSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_kh45i")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lawkb")
}],
"times": PackedFloat32Array(-0.62, 1.23)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4e61n"]
_data = {
"RESET": SubResource("Animation_8cgbl"),
"balloon": SubResource("Animation_s3yiy"),
"explosion": SubResource("Animation_xgi53")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xfu8h"]
radius = 58.0775

[node name="Balloon" instance=ExtResource("1_noic8")]
sync_to_physics = false
script = ExtResource("2_dbgn1")

[node name="Pop" type="AnimatableBody2D" parent="." index="0"]
visible = false
position = Vector2(1, -3)
collision_layer = 0
collision_mask = 16
sync_to_physics = false
script = ExtResource("3_ehbbo")
maxAge = 0.05

[node name="Sprite2D" type="Sprite2D" parent="Pop" index="0"]
texture = ExtResource("4_ugp8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pop" index="1"]
shape = SubResource("RectangleShape2D_ccflj")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(-1, 1)
texture = ExtResource("2_ow1rj")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_4e61n")
}

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 0)
shape = SubResource("CircleShape2D_xfu8h")

[node name="PopSpawnPoints" type="Node2D" parent="." index="3"]
position = Vector2(-1, -42)
scale = Vector2(3, 3)

[node name="Marker2D" type="Marker2D" parent="PopSpawnPoints" index="0"]
position = Vector2(-21, 21)

[node name="Marker2D2" type="Marker2D" parent="PopSpawnPoints" index="1"]
position = Vector2(32, 15)

[node name="Marker2D3" type="Marker2D" parent="PopSpawnPoints" index="2"]
position = Vector2(2, 17)

[node name="Marker2D4" type="Marker2D" parent="PopSpawnPoints" index="3"]
position = Vector2(18, 47)

[node name="Marker2D5" type="Marker2D" parent="PopSpawnPoints" index="4"]
position = Vector2(28, 15)

[node name="Marker2D6" type="Marker2D" parent="PopSpawnPoints" index="5"]
position = Vector2(0, 47)

[node name="Marker2D7" type="Marker2D" parent="PopSpawnPoints" index="6"]
position = Vector2(-36, 42)

[node name="Marker2D8" type="Marker2D" parent="PopSpawnPoints" index="7"]
position = Vector2(-54, 70)

[node name="Marker2D9" type="Marker2D" parent="PopSpawnPoints" index="8"]
position = Vector2(-39, 55)

[node name="Marker2D10" type="Marker2D" parent="PopSpawnPoints" index="9"]
position = Vector2(-25, 51)

[node name="Marker2D11" type="Marker2D" parent="PopSpawnPoints" index="10"]
position = Vector2(-29, 8)

[node name="Marker2D12" type="Marker2D" parent="PopSpawnPoints" index="11"]
position = Vector2(-22, -13)

[node name="Marker2D13" type="Marker2D" parent="PopSpawnPoints" index="12"]
position = Vector2(-39, -17)

[node name="Marker2D14" type="Marker2D" parent="PopSpawnPoints" index="13"]
position = Vector2(-36, -17)

[node name="Marker2D15" type="Marker2D" parent="PopSpawnPoints" index="14"]
position = Vector2(-43, -33)

[node name="Marker2D16" type="Marker2D" parent="PopSpawnPoints" index="15"]
position = Vector2(-29, -33)

[node name="Marker2D17" type="Marker2D" parent="PopSpawnPoints" index="16"]
position = Vector2(-19, -10)

[node name="Marker2D18" type="Marker2D" parent="PopSpawnPoints" index="17"]
position = Vector2(7, -7)

[node name="Marker2D19" type="Marker2D" parent="PopSpawnPoints" index="18"]
position = Vector2(45, -11)

[node name="Marker2D20" type="Marker2D" parent="PopSpawnPoints" index="19"]
position = Vector2(27, 7)

[node name="Marker2D21" type="Marker2D" parent="PopSpawnPoints" index="20"]
position = Vector2(52, -22)

[node name="Marker2D22" type="Marker2D" parent="PopSpawnPoints" index="21"]
position = Vector2(40, -9)

[node name="Marker2D23" type="Marker2D" parent="PopSpawnPoints" index="22"]
position = Vector2(44, -30)

[node name="Marker2D24" type="Marker2D" parent="PopSpawnPoints" index="23"]
position = Vector2(22, -4)

[node name="Marker2D25" type="Marker2D" parent="PopSpawnPoints" index="24"]
position = Vector2(33, -16)

[node name="Marker2D26" type="Marker2D" parent="PopSpawnPoints" index="25"]
position = Vector2(23, 36)

[node name="Marker2D27" type="Marker2D" parent="PopSpawnPoints" index="26"]
position = Vector2(11, 24)

[node name="Marker2D28" type="Marker2D" parent="PopSpawnPoints" index="27"]
position = Vector2(21, 29)

[node name="Marker2D29" type="Marker2D" parent="PopSpawnPoints" index="28"]
position = Vector2(47, 78)

[node name="Marker2D30" type="Marker2D" parent="PopSpawnPoints" index="29"]
position = Vector2(32, 65)

[node name="Marker2D31" type="Marker2D" parent="PopSpawnPoints" index="30"]
position = Vector2(39, 64)

[node name="Marker2D32" type="Marker2D" parent="PopSpawnPoints" index="31"]
position = Vector2(52, 78)

[node name="Marker2D33" type="Marker2D" parent="PopSpawnPoints" index="32"]
position = Vector2(40, 49)

[node name="Marker2D34" type="Marker2D" parent="PopSpawnPoints" index="33"]
position = Vector2(51, 56)

[node name="Marker2D35" type="Marker2D" parent="PopSpawnPoints" index="34"]
position = Vector2(41, 58)

[node name="Marker2D36" type="Marker2D" parent="PopSpawnPoints" index="35"]
position = Vector2(14, 47)

[node name="Marker2D37" type="Marker2D" parent="PopSpawnPoints" index="36"]
position = Vector2(0, 42)

[node name="Marker2D38" type="Marker2D" parent="PopSpawnPoints" index="37"]
position = Vector2(-15, 41)

[node name="Marker2D39" type="Marker2D" parent="PopSpawnPoints" index="38"]
position = Vector2(-20, 54)

[node name="Marker2D40" type="Marker2D" parent="PopSpawnPoints" index="39"]
position = Vector2(-40, 60)

[node name="Marker2D41" type="Marker2D" parent="PopSpawnPoints" index="40"]
position = Vector2(-53, 49)

[node name="Marker2D42" type="Marker2D" parent="PopSpawnPoints" index="41"]
position = Vector2(-60, 70)

[node name="Marker2D43" type="Marker2D" parent="PopSpawnPoints" index="42"]
position = Vector2(-58, 46)

[node name="Marker2D44" type="Marker2D" parent="PopSpawnPoints" index="43"]
position = Vector2(-66, 65)

[node name="PopSpawn" type="Node2D" parent="." index="4"]

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 10.0
one_shot = true

[node name="PopSound" type="AudioStreamPlayer2D" parent="." index="6"]
volume_db = -3.0
max_distance = 1000.0
attenuation = 2.0
bus = &"TableSounds"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
